<package>
  <name>roboy_controller</name>
  <version>0.0.0</version>
  <description>controllers</description>
  <maintainer email="simon.trendel@tum.de">Simon Trendel</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>controller_interface</build_depend> 
  <build_depend>common_utilities</build_depend> 
  <build_depend>hardware_interface</build_depend> 
  <build_depend>pluginlib</build_depend> 

  <run_depend>controller_interface</run_depend> 
  <run_depend>message_runtime</run_depend>
  <run_depend>common_utilities</run_depend> 
  <run_depend>roscpp</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>pluginlib</run_depend>

  <export>
    <controller_interface plugin="${prefix}/PositionController_plugin.xml" />
    <controller_interface plugin="${prefix}/VelocityController_plugin.xml" />
    <controller_interface plugin="${prefix}/ForceController_plugin.xml" />
  </export>
</package>
