<?xml version="1.0"?>
<package>
  <name>gazebo_control</name>
  <version>0.0.0</version>
  <description>A gazebo control package</description>
  <maintainer email="simon.trendel@tum.de">letrend</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>roscpp</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
	<gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>
</package>
