<package>
    <name>roboy_controller</name>
    <version>0.0.0</version>
    <description>controllers</description>
    <maintainer email="simon.trendel@tum.de">Simon Trendel</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>controller_interface</build_depend>
    <run_depend>controller_interface</run_depend>
    <run_depend>message_runtime</run_depend>

    <export>
        <controller_interface plugin="${prefix}/PositionController_plugin.xml"/>
        <controller_interface plugin="${prefix}/VelocityController_plugin.xml"/>
        <controller_interface plugin="${prefix}/ForceController_plugin.xml"/>
        <controller_interface plugin="${prefix}/MuscleActivityController_plugin.xml"/>
    </export>
</package>
