<?xml version="1.0"?>
<package>
    <name>roboy_simulation</name>
    <version>0.0.0</version>
    <description>The roboy_simulation package</description>
    <maintainer email="aliona.kharchenko@gmail.com">Aliona Kharchenko</maintainer>
    <maintainer email="simon.trendel@tum.de">Simon Trendel</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>

    <build_depend>message_generation</build_depend>
    <build_depend>control_toolbox</build_depend>
    <build_depend>controller_manager</build_depend>
    <build_depend>gazebo</build_depend>
    <build_depend>gazebo_ros_control</build_depend>
    <build_depend>pluginlib</build_depend>
    <build_depend>rviz</build_depend>
    <build_depend>interactive_markers</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>visualization_msgs</build_depend>
    <build_depend>tf</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>message_generation</run_depend>
    <run_depend>gazebo_ros_control</run_depend>
    <run_depend>controller_manager</run_depend>
    <run_depend>gazebo</run_depend>
    <run_depend>gazebo_ros</run_depend>
    <run_depend>control_toolbox</run_depend>
    <run_depend>controller_manager</run_depend>
    <run_depend>pluginlib</run_depend>
    <run_depend>interactive_markers</run_depend>
    <run_depend>visualization_msgs</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>rviz</run_depend>

    <export>
        <roboy_simulation plugin="${prefix}/muscle_plugin.xml"/>
        <roboy_simulation plugin="${prefix}/dummy_muscle_plugin.xml"/>
        <rviz plugin="${prefix}/walking_plugin.xml"/>
    </export>
</package>
