<?xml version="1.0"?>
<package>
  <name>trajectory_advertiser</name>
  <version>0.0.0</version>
  <description>The trajectory_advertiser package</description>
  <maintainer email="simon.trendel@tum.de">letrend</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_runtime</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
